--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/react
-# Edit at https://www.toptal.com/developers/gitignore?templates=react
+# Created by https://www.toptal.com/developers/gitignore/api/react,visualstudiocode
+# Edit at https://www.toptal.com/developers/gitignore?templates=react,visualstudiocode
 
 ### react ###
 .DS_*
@@ -17,26 +17,23 @@ psd
 thumb
 sketch
 
-# End of https://www.toptal.com/developers/gitignore/api/react# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Local History for Visual Studio Code
+.history/
 
-# testing
-/coverage
+# Built Visual Studio Code Extensions
+*.vsix
 
-# production
-/build
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# End of https://www.toptal.com/developers/gitignore/api/react,visualstudiocode
