Project page base done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,22 @@
         "fontawesome",
         "fortawesome",
         "Offcanvas",
+        "predeploy",
         "Thiago"
-    ]
+    ],
+    "editor.formatOnSave": true,
+    "prettier.requireConfig": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[typescript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[javascriptreact]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[html]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    }
 }
