--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "portfolio",
 	"version": "0.1.0",
-	"homepage": "https://thiagomarcelino.com/",
+	"homepage": "https://thiagodsmarcelino.github.io/portfolio/",
 	"private": true,
 	"dependencies": {
 		"@fortawesome/fontawesome-svg-core": "^6.4.2",
