--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,25 @@
 {
-    "cSpell.words": [
-        "fontawesome",
-        "fortawesome",
-        "Offcanvas",
-        "predeploy",
-        "Thiago"
-    ],
-    "editor.formatOnSave": true,
-    "prettier.requireConfig": true,
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "[javascript]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[typescript]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[javascriptreact]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[html]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    }
+	"cSpell.words": [
+		"fontawesome",
+		"fortawesome",
+		"Offcanvas",
+		"predeploy",
+		"Thiago",
+		"Tuiuti"
+	],
+	"editor.formatOnSave": true,
+	"prettier.requireConfig": true,
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
+	"[javascript]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[typescript]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[javascriptreact]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[html]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	}
 }
